--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@ body{
     bottom: 20px;
     right: 40px;
 }
+.homePage:active, .aboutPage:active, .contactPage:active {
+    
+}
 
 @media screen and (max-width: 1206px) {
     .subH1 {
@@ -59,5 +62,9 @@ body{
     }
   
 }
+@media screen and (min-width: 1300px) {
+    .RightSpan {
 
+    }
+}
 
